Issue #2408 Fix link opening